<resources>
    <string name="app_name">HayParking</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="preferences">preferences</string>
    <string name="preference_file_key">preferences_file</string>
    <string name="email">email</string>
    <string name="password">contraseña</string>
    <string name="name">nombre</string>
    <string name="last_name">apellido</string>
    <string name="ingress">Ingresar</string>
    <string name="logo">Logo</string>
    <string name="registry">Registrar</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="registry_view">Registrate</string>
    <string name="title_activity_maps">Map</string>
    <string name="LatFinName">LatFin</string>
    <string name="longFinName">longFin</string>
    <string name="latIniName">latIni</string>
    <string name="longIniName">longIni</string>
    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="encuentra_tu_parqueadero">ENCUENTRA TU PARQUEADERO</string>
    <string name="ubicaci_n">Ubicación</string>
    <string name="destino">Destino</string>
    <string name="buscarMapName">Buscar</string>
    <string name="mis_viajes">Mis Viajes</string>
    <string name="todo">TODO</string>
</resources>
